# hash-server

./: .clang-tidy  .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.integration-tests.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: cmake-single-platform.yml
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  epoll.cpp  epoll.hpp  errors_helper.hpp  hasher.cpp  hasher.hpp  polling.cpp  polling.hpp  server.cpp  server.hpp  server_configuration.hpp  socket.cpp  socket.hpp  socket_address.cpp  socket_address.hpp  thread_pool.cpp  thread_pool.hpp
tests/: CMakeLists.txt  hasher_tests.cpp  precomputed_hashes.hpp  server_tests.cpp  socket_address_tests.cpp
tests/integration_tests/: CMakeLists.txt  main.cpp  server_tests.cpp
tests/unit_tests/: CMakeLists.txt
